--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let rep of reponses">
-  {{rep.nom + " " + rep.prenom}}
+  {{rep.nom + " " + rep.prenom +" "+rep.renseignement22 }} {{" "+rep.created | date:'medium'}}
 </div>
