--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -6,3 +6,56 @@ input.ng-valid[required], .ng-valid.required  {
 input.ng-invalid:not(form)  {
     border-left: 5px solid #a94442; 
   }
+
+@media (min-width: 1200px){
+.container {
+    width: 1117px;
+}
+}
+.mat-vertical-content {
+  border: 1px solid;
+  padding: 34px 24px 24px 24px;
+}
+::ng-deep .mat-vertical-stepper-header .mat-step-icon, 
+::ng-deep .mat-vertical-stepper-header .mat-step-icon-not-touched,
+::ng-deep ng-deep mat-step-header .mat-step-icon-not-touched span,
+::ng-deep mat-step-header .mat-step-icon span,
+::ng-deep mat-step-header .mat-step-icon-not-touched .mat-icon,
+::ng-deep .mat-step-header .mat-step-icon,
+::ng-deep mat-step-header[ng-reflect-active="true"] + .mat-stepper-vertical-line::before{
+  display: none ;
+}
+
+/* ::ng-deep .mat-step-label.mat-step-label-active{ */
+::ng-deep .mat-step-label{
+
+  background-color: red;
+    padding: 4px;
+    border-radius: 34px;
+    width: 266px;
+    text-align: center;
+    font-size: 16px;
+}
+
+::ng-deep .mat-stepper-vertical-line::before {
+  left: 84px !important;
+  border-left-width: 3px !important;
+
+}
+
+::ng-deep mat-step-header[ng-reflect-selected="true"] + .mat-vertical-content-container{
+  border: 2px solid #858d90;
+  padding-top: 25px;
+  border-radius: 25px;
+}
+
+
+::ng-deep mat-step-header {
+  left: 48px;
+width: 92%;
+}
+
+::ng-deep mat-step-header[ng-reflect-selected="true"] {
+  top: 36px;
+  z-index: 99;
+}
