5- Finalisation Style Form But Error Next Button Deuxieme Step

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,10 @@
     line-height: 41px;
     width: 100%;
     padding-left: 423px;
-    background-color: #f3f4f8;
+    background-color: #ffffff;
+    box-shadow: 0 6px 16px -4px #c3c3c3;
+    color: #aeb6c6;
+    font-size: 18px;
 }
 .herders{
     width: 126.5%;
@@ -74,5 +77,6 @@
     margin-bottom: 50px;
 }
 .content{
-    margin-top: 130px;
+    margin-top: 124px;
+    background-color: #f3f4f8;
 }
