--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,15 +1,20 @@
-
-input.ng-valid[required], .ng-valid.required  {
-    border-left: 5px solid #42A948;   
+input{
+  border-radius: 4px 15px 15px 4px;
+}
+input.ng-valid, .ng-valid.required  {
+    border-left: 5px solid #2cdf99;   
   }
   
 input.ng-invalid:not(form)  {
-    border-left: 5px solid #a94442; 
+    border-left: 5px solid #e9132c; 
   }
 
 @media (min-width: 1200px){
 .container {
     width: 1117px;
+    background-color: #f3f4f8;
+    color: #304c58;
+
 }
 }
 .mat-vertical-content {
@@ -22,31 +27,52 @@ input.ng-invalid:not(form)  {
 ::ng-deep mat-step-header .mat-step-icon span,
 ::ng-deep mat-step-header .mat-step-icon-not-touched .mat-icon,
 ::ng-deep .mat-step-header .mat-step-icon,
-::ng-deep mat-step-header[ng-reflect-active="true"] + .mat-stepper-vertical-line::before{
+::ng-deep mat-step-header[ng-reflect-selected="true"] + .mat-stepper-vertical-line::before{
   display: none ;
 }
 
 /* ::ng-deep .mat-step-label.mat-step-label-active{ */
 ::ng-deep .mat-step-label{
 
-  background-color: red;
+    background-color: white;
     padding: 4px;
     border-radius: 34px;
     width: 266px;
     text-align: center;
     font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 5px 2px -2px grey;
+    color: #000;
+}
+/* ::ng-deep .mat-step-label.mat-step-label-active{ */
+::ng-deep .mat-button{
+
+    background-color: white;
+    padding: 4px;
+    border-radius: 30px !important;
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 5px 2px -2px grey;
+    color: #ffffff00;
+}
+
+::ng-deep .mat-step-header .mat-step-label.mat-step-label-active{
+  color: #5b6d76;
 }
 
 ::ng-deep .mat-stepper-vertical-line::before {
   left: 84px !important;
-  border-left-width: 3px !important;
-
+  border-left-width: 1px !important;
+  border-left-color: #304c58;
 }
 
 ::ng-deep mat-step-header[ng-reflect-selected="true"] + .mat-vertical-content-container{
-  border: 2px solid #858d90;
+  border: 2px solid #858d90 !important;
   padding-top: 25px;
   border-radius: 25px;
+  background-color: #f3f4f8;
 }
 
 
@@ -58,4 +84,62 @@ width: 92%;
 ::ng-deep mat-step-header[ng-reflect-selected="true"] {
   top: 36px;
   z-index: 99;
+}
+
+::ng-deep .mat-step-header:hover{
+  background-color:#ffffff00;
+  cursor: default;
+}
+::ng-deep .mat-step{
+  background-color: #f3f4f8;
+}
+::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle{
+  border-color: #62e0f7;
+}
+
+::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle{
+  background-color: #62e0f7;
+}
+
+.row1{
+  margin-top: 15px;
+}
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,
+::ng-deep .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background{
+  background-color: #62e0f7;
+}
+
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,
+::ng-deep .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background{
+  background-color: #62e0f7;
+
+}
+::ng-deep .br-square .br-unit.br-active,
+::ng-deep .br-square .br-unit.br-selected{
+    border: 2px solid #62e0f7;
+    color: #62e0f7;
+    background-color: #62e0f7;
+    border-radius: 10px;
+}
+::ng-deep .br-unit[_ngcontent-c4]{
+  border: 2px solid #fff;
+  color: #fff;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+
+::ng-deep .br-square .br-text  {
+  letter-spacing: 2px ;
+  font-size: 16px ;
+  clear: both ;
+  width: 178px ;
+  text-align: center ;
+  font-weight: 600 ;
+  display: block ;
+  color: #62e0f7 ;
+}
+.qst-title{
+  font-size: 15px;
+  font-weight: bold;
 }
