--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,8 +2,7 @@
   <form novalidate [formGroup]="reponseFrm" (ngSubmit)="addReponse(reponseFrm.value)" *ngIf="reponseFrm">
       <mat-vertical-stepper [linear]="true" #stepper>
           <mat-step  [completed]="reponseFrm.controls['nom'].valid &&  reponseFrm.controls['genre'].valid && reponseFrm.controls['age'].valid && reponseFrm.controls['etat'].valid && reponseFrm.controls['emploi'].valid" label="Description de l'investisseur">
-          <!-- <mat-step [completed]="reponseFrm.controls['nom'].valid|| reponseFrm.controls['prenom'].valid" label="Description de l'investisseur"> -->
-            
+        
             <div class="row1 col-md-11 col-md-offset-1">
                 <div class="col-md-2">
                   <label for="nom">Nom & prénom</label>
@@ -75,14 +74,12 @@
       
                     
             <div>
-                    <button [disabled]="false" type="button" mat-button matStepperNext>Next</button>
-                    <!-- <button [disabled]="!reponseFrm.controls['nom'].valid|| !reponseFrm.controls['prenom'].valid" type="button" mat-button matStepperNext>Next</button> -->
+                    <button type="button" mat-button matStepperNext>Next</button>
             </div>
           </mat-step>
 
           <mat-step [completed]="reponseFrm.controls['object1'].valid &&  reponseFrm.controls['object2'].valid && reponseFrm.controls['object3'].valid && reponseFrm.controls['horizon'].valid && reponseFrm.controls['minrendement'].valid" label="Objectif de placement " class="col-md-12">
-
-                <div *ngFor="let quest of objectifs" >
+               <div *ngFor="let quest of objectifs" >
                     <div class="qst-title col-md-12" ><label> {{quest.text}} </label></div>
                     <div class="qst-options form-group col-md-12">
                         <mat-radio-group class="example-radio-group col-md-12" required [formControlName]="quest.tag">
@@ -105,7 +102,7 @@
                 </div>
             </mat-step>
 
-          <mat-step label="Tolérance au risque  " class="col-md-12">
+          <mat-step [completed]="reponseFrm.controls['tolerance1'].valid &&  reponseFrm.controls['tolerance2'].valid && reponseFrm.controls['tolerance3'].valid && reponseFrm.controls['tolerance4'].valid && reponseFrm.controls['maxpert'].valid" label="Tolérance au risque  " class="col-md-12">
 
                 <div *ngFor="let quest of tolerances" >
                     <div class="qst-title col-md-12" ><label for="">{{quest.text}}</label></div>
@@ -129,7 +126,7 @@
                 </div>
             </mat-step>
 
-          <mat-step label="Renseignement sur l’investisseur " class="col-md-12">
+          <mat-step [completed]="reponseFrm.controls['renseignement1'].valid && reponseFrm.controls['renseignement3'].valid" label="Renseignement sur l’investisseur " class="col-md-12">
 
                 <div *ngFor="let quest of renseignements; let c = index" >
                     <div class="qst-title col-md-12" ><label>{{quest.text}}</label></div>
