7- Finalisation Style Form & Create Dashboard

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -151,7 +151,7 @@
             </mat-step>
 
         </mat-vertical-stepper>
-        <button type="submit" class="btn btn-success" [disabled]="!reponseFrm.valid">Envoyer</button>
+        <button type="submit" class="btn btn-success" [disabled]="!reponseFrm.valid"><img src="../../assets/validation.png" alt="">Validation</button>
   </form>
  
 </div> 
