--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -41,7 +41,7 @@ input.ng-invalid:not(form)  {
     text-align: center;
     font-size: 16px;
     cursor: pointer;
-    box-shadow: 0 5px 2px -2px grey;
+    box-shadow: 0 2px 2px -2px grey;
     color: #000;
 }
 /* ::ng-deep .mat-step-label.mat-step-label-active{ */
@@ -54,7 +54,7 @@ input.ng-invalid:not(form)  {
     text-align: center;
     font-size: 16px;
     cursor: pointer;
-    box-shadow: 0 5px 2px -2px grey;
+    box-shadow: 0 2px 2px -2px grey;
     color: #ffffff00;
 }
 
@@ -136,4 +136,26 @@ width: 92%;
 .qst-title{
   font-size: 15px;
   font-weight: bold;
+}
+.btn-success{
+    color: #304c58;
+    background-color: #fff;
+    border-color: #fff;
+    border-radius: 20px;
+    padding: 5px 17px;
+    margin-left: 39px;
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+
+.btn-success:hover{
+  color: #304c58;
+  background-color: #e0e0e0;
+  border-color: #e0e0e0;
+}
+
+.btn-success img{
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
 }
