--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 @import '~ngx-bar-rating/themes/br-square-theme.css';
-
+@import "~@ng-select/ng-select/themes/material.theme.css";
 
 
 @font-face {
