--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -65,11 +65,11 @@ input.ng-invalid:not(form)  {
 ::ng-deep .mat-stepper-vertical-line::before {
   left: 84px !important;
   border-left-width: 1px !important;
-  border-left-color: #304c58;
+  border-left-color: #d6dfe2;
 }
 
 ::ng-deep mat-step-header[ng-reflect-selected="true"] + .mat-vertical-content-container{
-  border: 2px solid #858d90 !important;
+  border: 2px solid #c6d0d4  !important;
   padding-top: 25px;
   border-radius: 25px;
   background-color: #f3f4f8;
@@ -119,7 +119,9 @@ width: 92%;
   border: 2px solid #fff ;
   color: #fff ;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 5px;
+  height: 23px;
+  width: 25px;
 }
 
 ::ng-deep .br-square .br-unit.br-active,
@@ -127,7 +129,7 @@ width: 92%;
     border: 2px solid #62e0f7;
     color: #62e0f7;
     background-color: #62e0f7;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 
 /* ::ng-deep .mat-radio-label-content{
