12- Update Dashboard & start Style On Dash Side

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,9 @@
     src: url('./assets/NexaLight.otf');
 }
 
+body{
+    background-color: #FAFBFF !important;
+}
 div ,button{
     font-family: NexaLight;
 }
