--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,47 @@
 <div class="dashboard">
+
   <div class="select">
-    <ng-select [items]="actions"
-    bindLabel="_id.designation"
-    bindValue="_id.slug"
-    placeholder="Select Action"
-    (change)="onChange($event)">
-  </ng-select>
+      <ng-select [items]="actions"
+      bindLabel="_id.designation"
+      bindValue="_id"
+      placeholder="Select Action"
+      (change)="onChange($event)"
+     >
+    </ng-select>
   </div>
-  <div class="chart-wrapper">
-    <div id="chartPieChart" class="chart"></div>
+  <div class="cards">
+    <div class="cars card-1">
+        <div id="progressbar">
+            <div></div>
+          </div>
+        <div id="prog_info">
+            <span>Dérnier cours</span><span>2540 DH</span>
+        </div>
+    </div>
+    <div class="cars card-2">
+        <div id="progressbar">
+            <div></div>
+          </div>
+          <div id="prog_info">
+              <span>Dérnier cours</span><span>2540 DH</span>
+          </div>
+    </div>
+    <div class="cars card-3">
+        <div id="progressbar">
+            <div></div>
+        </div>
+        <div id="prog_info">
+            <span>Dérnier cours</span><span>2540 DH</span>
+        </div>
+    </div>
   </div>
+  <div class="dash_tab">
+    <div class="chart-wrapper">
+        <div id="chartPieChart" class="chart"></div>
+    </div>
+    <div class="tableau">
+
+    </div>
+  </div>
+  
 </div>
