--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,16 @@
 
   <div class="container">
     <div class="herders">
-      <div class="logo"><img (click)="download()"  src="../assets/pdf.png" alt=""></div>
+      <div class="logo">
+        <div class="logo_rigth">
+              <div class="serach_input"><input placeholder="Search... " type="text"></div>
+              
+            <div class="img_pdf">  <img (click)="download()"  src="../assets/pdf.png" alt=""></div>
+            <div class="img_setting"><img src="../assets/setting.png" alt=""></div>
+            <div class="useer"><Span>Mehdi Nassiri</Span> <img src="../assets/mehdi.png" alt=""></div>
+        </div>
+
+      </div>
      <div class="titre">{{message}}</div>
     </div>
     
